Added empty profile page

--- a/App/Profile.html
+++ b/App/Profile.html
@@ -19,14 +19,10 @@
 
 <div class="center">
     <div class="h2">
-        Search Results:
+        Profile
     </div>
-</div>
-<center>
-    <img src="images/testrecipe.jpg" width=20%>
-</center>
-<div class="center">
-    <input class="button" type="button" onclick="location.href='Homepage.html';" value="Return Home" />
-</div>
+    <div class="center">
+        <input class="button" type="button" onclick="location.href='Homepage.html';" value="Return Home" />
+    </div>
 
 </html>
