Added profile page, updated logo, changed file names for publishing

--- a/SearchResults.html
+++ b/SearchResults.html
@@ -10,7 +10,7 @@
 
 <body style="background-color:rgb(242, 242, 4);"></body>
 
-<img src="images/makeshiftlogo.jpg" id="left" width=10%>
+<img src="images/logo.png" id="left" width=10%>
 <a href="Profile.html">
     <img src="images/profile.png" class="ribbon" id="right" width=10%>
 </a>
@@ -26,7 +26,7 @@
     <img src="images/testrecipe.jpg" width=20%>
 </center>
 <div class="center">
-    <input class="button" type="button" onclick="location.href='Homepage.html';" value="Return Home" />
+    <input class="button" type="button" onclick="location.href='index.html';" value="Return Home" />
 </div>
 
 </html>
