--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <body style="background-color:rgb(242, 242, 4);"></body>
 
 <center>
-    <img src="images/makeshiftlogo.jpg" width=20%>
+    <img src="images/logo.png" width=20%>
 </center>
 <a href="Profile.html">
     <img alt="profile" src="images/profile.png" class="ribbon" id="right" width=10%>
 </a>
 </div>
 
-<div class="title">
-    FoodChive
-</div>
 <div class="center">
     <input type="text" id="searchbox" placeholder="Search For Recipes">
     <input class="button" type="button" onclick="location.href='SearchResults.html';" value="Search" />
