--- a/client/SearchResults.html
+++ b/client/SearchResults.html
@@ -4,7 +4,7 @@
 <head>
     <title> FoodChive </title>
     <link rel="stylesheet" href="Homepage.css">
-    <script type="module" src="Homepage.js" defer></script>
+    <script type="text/javascript" src="Homepage.js"></script>
 </head>
 
 
@@ -18,11 +18,17 @@
 
 
 <div class="center">
-    <div class="h2">
+    <div class="h1">
         Search Results:
     </div>
 </div>
+
 <center>
+    <div class="h2">
+        Your Query:
+        <div id="search"></div>
+        <script src='Homepage.js'></script>
+    </div>
     <img src="images/testrecipe.jpg" width=20%>
 </center>
 <div class="center">
