Added pressing enter to also search

--- a/client/index.html
+++ b/client/index.html
@@ -21,8 +21,7 @@
 
 <div class="center">
     <input id="searchbar" type="text" name="search" placeholder="Search recipes...">
-    <input class="button" type="button" onclick="search_recipes(); location.href='SearchResults.html'" value="Search" />
-
+    <input class="button" id="searchbutton" type="button" onclick="search_recipes(); location.href='SearchResults.html'" value="Search" />
 </div>
 
 
