--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,10 @@
 <body style="background-color:rgb(242, 242, 4);"></body>
 
 <center>
-    <img src="images/logo.png" width=20%>
+    <img src="./images/logo.png" width=20%>
 </center>
 <a href="Profile.html">
-    <img alt="profile" src="images/profile.png" class="ribbon" id="right" width=10%>
+    <img alt="profile" src="./images/profile.png" class="ribbon" id="right" width=10%>
 </a>
 </div>
 
