display database info on frontend

--- a/client/Profile.html
+++ b/client/Profile.html
@@ -4,7 +4,7 @@
 <head>
     <title> FoodChive </title>
     <link rel="stylesheet" href="Homepage.css">
-    <script type="module" src="Homepage.js" defer></script>
+    <script type="module" src="./Homepage.js"></script>
 </head>
 
 
