--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
     <title> FoodChive </title>
     <link rel="stylesheet" href="Homepage.css">
-    <script type="text/javascript" src="Homepage.js"></script>
+    <script type="module" src="./Homepage.js"></script>
 
 </head>
 
@@ -21,7 +21,7 @@
 
 <div class="center">
     <input id="searchbar" type="text" name="search" placeholder="Search recipes...">
-    <input class="button" id="searchbutton" type="button" onclick="search_recipes(); location.href='SearchResults.html'" value="Search" />
+    <input class="button" id="searchbutton" type="button" value="Search" />
 </div>
 
 
