--- a/client/SearchResults.html
+++ b/client/SearchResults.html
@@ -4,8 +4,9 @@
 <head>
     <title> FoodChive </title>
     <link rel="stylesheet" href="Homepage.css">
-    <script type="text/javascript" src="Homepage.js"></script>
+    <script type="module" src="./Homepage.js"></script>
 </head>
+
 
 
 <body style="background-color:rgb(242, 242, 4);"></body>
@@ -26,10 +27,11 @@
 <center>
     <div class="h2">
         Your Query:
-        <div id="search"></div>
-        <script src='Homepage.js'></script>
+        <div id="search">
+        </div>
+        <!-- <script src='Homepage.js'></script> -->
     </div>
-    <img src="images/testrecipe.jpg" width=20%>
+    <!-- <img src="images/testrecipe.jpg" width=20%> -->
 </center>
 <div class="center">
     <input class="button" type="button" onclick="location.href='index.html';" value="Return Home" />
