--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>FoodChive</title>
 </head>
 
